--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
