--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^7.0.1",
     "rehype-prism-plus": "^2.0.0",
