--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@supabase/supabase-js": "^2.45.2",
     "@uiw/react-md-editor": "^4.0.4",
     "emailjs-com": "^3.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
     "marked": "^14.1.1",
     "mermaid": "^11.0.2",
     "prismjs": "^1.29.0",
