--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
